Refait les livres

--- a/src/app/interets/interets.component.html
+++ b/src/app/interets/interets.component.html
@@ -280,7 +280,7 @@
                     <div class="custom-control custom-checkbox">
                         <input type="checkbox" class="custom-control-input" id="check35"
                             (change)="updateCheckedOptions($event)">
-                        <label class="custom-control-label" for="check35">Nouvelle fiction</label></div>
+                        <label class="custom-control-label" for="check35">fiction</label></div>
                 </td>
 
                 <td>
