Client ok + Livre WIP

--- a/src/app/interets/interets.component.html
+++ b/src/app/interets/interets.component.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="table-responsive">
-        <table class="table">
+        <table #table class="table">
             <tr>
                 <th>Art poétique</th>
             </tr>
