--- a/src/app/display-user-data/display-user-data.component.html
+++ b/src/app/display-user-data/display-user-data.component.html
@@ -4,22 +4,25 @@
             <div class="table-responsive">
                 <table class="table table-dark" style="align-items: center;">
                     <tr>
-                        <td rowspan="5">
-                            <img *ngIf="a.volumeInfo.imageLinks" [src]=a.volumeInfo.imageLinks.thumbnail>
+                        <td rowspan="6" style="width: 300px;">
+                            <img src="assets/missingbook.png">
                         </td>
                         <td>
-                            <div *ngIf="a.volumeInfo.title; else ng1">
-                                <h3>Titre : {{a.volumeInfo.title}}</h3>
+                            <div *ngIf="a.Titre; else ng1">
+                                <h3>Titre : {{a.Titre}}</h3>
                             </div>
                             <ng-template #ng1>
                                 <h3>Titre : Indisponible</h3>
                             </ng-template>
                         </td>
+                        <td style="text-align: right;">
+                            <button class="btn btn-primary">Je&nbsp;le&nbsp;veux&nbsp;!</button>
+                        </td>
                     </tr>
                     <tr style="vertical-align:top;">
                         <td>
-                            <div *ngIf="a.volumeInfo.authors; else ng2">
-                                <p>Auteur : {{a.volumeInfo.authors[0]}}</p>
+                            <div *ngIf="a.Prenom && a.Nom; else ng2">
+                                <p>Auteur : {{a.Prenom}} {{a.Nom}}</p>
                             </div>
                             <ng-template #ng2>
                                 <p>Auteur : Indisponible</p>
@@ -28,8 +31,8 @@
                     </tr>
                     <tr style="vertical-align:top;">
                         <td>
-                            <div *ngIf="a.volumeInfo.description; else ng3">
-                                <p>Description : {{a.volumeInfo.description}}</p>
+                            <div *ngIf="a.Description; else ng3">
+                                <p>Description : {{a.Description}}</p>
                             </div>
                             <ng-template #ng3>
                                 <p>Description : Indisponible</p>
@@ -39,8 +42,8 @@
                     <tr style="vertical-align:top;">
 
                         <td>
-                            <div *ngIf="a.volumeInfo.publisher; else ng4">
-                                <p>Editeur : {{a.volumeInfo.publisher}}</p>
+                            <div *ngIf="a.Editeur; else ng4">
+                                <p>Editeur : {{a.Editeur}}</p>
                             </div>
                             <ng-template #ng4>
                                 <p>Editeur : Indisponible</p>
@@ -49,7 +52,19 @@
                     </tr>
                     <tr style="vertical-align:top;">
                         <td>
-                            <p>ISBN : {{a.volumeInfo.industryIdentifiers[0].identifier}}</p>
+                            <div *ngIf="a.Genre; else ng5">
+                                <p>Genre : {{a.Genre}}</p>
+                            </div>
+                            <ng-template #ng5>
+                                <p>Genre : Indisponible</p>
+                            </ng-template>
+                        </td>
+                    </tr>
+                    <tr style="vertical-align:top;">
+                        <td>
+                            <div>
+                                <p>ISBN : {{a.ISBN}}</p>
+                            </div>
                         </td>
                     </tr>
                 </table>
