--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
-    <h1>Liste de souhait</h1>
+    <h1>Liste de souhaits</h1>
     <div class="form-group required ">
         <label class="col-md-12 control-label">ISBN ou titre</label>
         <div class="col-md-12 ">
