--- a/src/app/display-user-data/display-user-data.component.html
+++ b/src/app/display-user-data/display-user-data.component.html
@@ -5,7 +5,7 @@
                 <table class="table table-dark" style="align-items: center;">
                     <tr>
                         <td rowspan="6" style="width: 300px; text-align: center;">
-                            <img style="width: 200px;" [src]="k[i]">
+                            <img style="width: 200px;" [src]="k[j.length - i-1]">
                         </td>
                         <td>
                             <div *ngIf="a.Titre; else ng1">
@@ -21,12 +21,15 @@
                     </tr>
                     <tr style="vertical-align:top;">
                         <td>
-                            <div *ngIf="a.Nom_complet; else ng2">
-                                <p>Auteur : {{a.Nom_complet}}</p>
+                            <div>
+                                <p>Auteur(s) :</p>
+                                <ul *ngFor="let c of p[j.length - i-1]">
+                                    <li *ngIf="c.Nom_complet.length != 0; else pasAuteur">{{c.Nom_complet}}</li>
+                                    <ng-template #pasAuteur>
+                                        <li>Auteur indisponible</li>
+                                    </ng-template>
+                                </ul>
                             </div>
-                            <ng-template #ng2>
-                                <p>Auteur : Indisponible</p>
-                            </ng-template>
                         </td>
                     </tr>
                     <tr style="vertical-align:top;">
@@ -54,7 +57,7 @@
                         <td>
                             <div>
                                 <p>Genre(s) : </p>
-                                <ul *ngFor="let b of m[i]">
+                                <ul *ngFor="let b of m[j.length - i-1]">
                                     <li>{{b.Genre}}</li>
                                 </ul>
                             </div>
