--- a/src/app/recommandations/recommandations.component.html
+++ b/src/app/recommandations/recommandations.component.html
@@ -1,4 +1,26 @@
 <div class="container">
+    <!--MODALDEBUT-->
+    <div>
+        <a #trigger data-toggle="modal" href="#showModal" style="visibility: none;"></a>
+        <div #showModal id='showModal' class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" #modalTitre></h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <p #modalContenu></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal" #modalFermer></button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!--MODALFIN-->
     <ul style="list-style-type: none;">
         <li *ngFor="let a of j">
             <div class="table-responsive">
