--- a/src/app/display-user-data/display-user-data.component.html
+++ b/src/app/display-user-data/display-user-data.component.html
@@ -16,7 +16,8 @@
                             </ng-template>
                         </td>
                         <td style="text-align: right;">
-                            <button class="btn btn-primary">Je&nbsp;le&nbsp;veux&nbsp;!</button>
+                            <button class="btn btn-primary clickable" (click)="takeLivre($event)">Je&nbsp;le&nbsp;veux&nbsp;!</button>
+                            <button class="btn btn-primary" style="visibility: hidden;">Je&nbsp;le&nbsp;veux&nbsp;!</button>
                         </td>
                     </tr>
                     <tr style="vertical-align:top;">
