--- a/src/app/recommandations/recommandations.component.html
+++ b/src/app/recommandations/recommandations.component.html
@@ -10,7 +10,7 @@
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <p #modalContenu></p>
+                        <p style="text-align: justify;" #modalContenu></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal" #modalFermer></button>
