--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -43,7 +43,8 @@
                         </ng-template>
                     </td>
                     <td>
-                        <button class="btn btn-primary" (click)="test($event)">Je&nbsp;le&nbsp;veux&nbsp;!</button>
+                        <button class="btn btn-primary clickable" (click)="test($event)">Je&nbsp;le&nbsp;veux&nbsp;!</button>
+                        <button class="btn btn-primary" style="visibility: hidden;">Je&nbsp;le&nbsp;veux&nbsp;!</button>
                     </td>
                 </tr>
                 <tr style="vertical-align:top;">
