--- a/src/app/recommandations/recommandations.component.html
+++ b/src/app/recommandations/recommandations.component.html
@@ -22,56 +22,54 @@
     </div>
     <!--MODALFIN-->
     <ul style="list-style-type: none;">
-        <li *ngFor="let a of j">
+        <li *ngFor="let a of j; let in = index;">
             <div class="table-responsive">
                 <table class="table table-dark" style="align-items: center;">
                     <tr>
-                        <td rowspan="5">
-                            <img *ngIf="a.volumeInfo.imageLinks" [src]=a.volumeInfo.imageLinks.thumbnail>
-                        </td>
+                        
                         <td>
-                            <div *ngIf="a.volumeInfo.title; else ng1">
-                                <h3>Titre : {{a.volumeInfo.title}}</h3>
+                            <div *ngIf="a.Titre; else ng1">
+                                <h3>Titre : {{a.Titre}}</h3>
                             </div>
                             <ng-template #ng1>
                                 <h3>Titre : Indisponible</h3>
                             </ng-template>
                         </td>
-                    </tr>
-                    <tr style="vertical-align:top;">
-                        <td>
-                            <div *ngIf="a.volumeInfo.authors; else ng2">
-                                <p>Auteur : {{a.volumeInfo.authors[0]}}</p>
-                            </div>
-                            <ng-template #ng2>
-                                <p>Auteur : Indisponible</p>
-                            </ng-template>
+                        <td style="text-align: right;">
+                            <button class="btn btn-primary clickable"
+                                (click)="takeLivre($event)">Je&nbsp;le&nbsp;veux&nbsp;!</button>
+                            <button class="btn btn-primary"
+                                style="visibility: hidden;">Je&nbsp;le&nbsp;veux&nbsp;!</button>
                         </td>
                     </tr>
                     <tr style="vertical-align:top;">
                         <td>
-                            <div *ngIf="a.volumeInfo.description; else ng3">
-                                <p>Description : {{a.volumeInfo.description}}</p>
+                            <div *ngIf="a.Description; else ng2">
+                                <p>Description : {{a.Description}}</p>
                             </div>
-                            <ng-template #ng3>
+                            <ng-template #ng2>
                                 <p>Description : Indisponible</p>
                             </ng-template>
                         </td>
                     </tr>
                     <tr style="vertical-align:top;">
-
                         <td>
-                            <div *ngIf="a.volumeInfo.publisher; else ng4">
-                                <p>Editeur : {{a.volumeInfo.publisher}}</p>
+                            <div *ngIf="a.Editeur; else ng3">
+                                <p>Editeur : {{a.Editeur}}</p>
                             </div>
-                            <ng-template #ng4>
+                            <ng-template #ng3>
                                 <p>Editeur : Indisponible</p>
                             </ng-template>
                         </td>
                     </tr>
                     <tr style="vertical-align:top;">
                         <td>
-                            <p>ISBN : {{a.volumeInfo.industryIdentifiers[0].identifier}}</p>
+                            <div *ngIf="a.ISBN; else ng4">
+                                <p>ISBN : {{a.ISBN}}</p>
+                            </div>
+                            <ng-template #ng4>
+                                <p>ISBN : Indisponible</p>
+                            </ng-template>
                         </td>
                     </tr>
                 </table>
